--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^2.5.7",
-    "express": "^4.15.4"
+    "express": "^4.15.4",
+    "express-basic-auth": "^1.1.2",
+    "express-basicauth": "^1.0.2",
+    "morgan": "^1.8.2"
   }
 }
