--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.15.4",
     "express-basic-auth": "^1.1.2",
     "express-basicauth": "^1.0.2",
-    "morgan": "^1.8.2"
+    "morgan": "^1.8.2",
+    "randomstring": "^1.1.5"
   }
 }
